--- a/src/engine/common/Makefile
+++ b/src/engine/common/Makefile
@@ -15,10 +15,14 @@ OPENCV_LIBS = opencv_core opencv_imgproc
 OPENCV_FLAGS = -L$(OPENCV_LIB_DIR) $(addprefix -l,$(OPENCV_LIBS))
 OPENCV_FLAGS += -I/usr/local/include/opencv4
 
+JSON_INC = $(PROJDIR)/thirdparty/nlohmann/
+JSON_FLAGS = -I$(JSON_INC)
+
 CXX = g++
 CXXFLAGS = -g -std=c++14 -Wall -c
 CXXFLAGS += $(INC_FLAGS)
 CXXFLAGS += $(OPENCV_FLAGS)
+CXXFLAGS += $(JSON_FLAGS)
 CXXFLAGS += -MMD -MP
 
 SOURCES := $(shell find $(SOURCEDIR) -name '*.cpp' -or -name '*.c' -or -name '*.s')
