Added SceneTagger for tagging an image using classifier,mapper & filterer

--- a/src/engine/taggers/scene_tagger/Makefile
+++ b/src/engine/taggers/scene_tagger/Makefile
@@ -1,15 +1,24 @@
-LIBRARY_NAME = libcommon.a
-PROJDIR := $(realpath $(CURDIR)/../../..)
+TARGET_LIBRARY_NAME = libscenetagger.a
+PROJDIR := $(realpath $(CURDIR)/../../../..)
 BUILDDIR = $(PROJDIR)/build
-LIBRARY := $(BUILDDIR)/libs/$(LIBRARY_NAME)
+TARGET_LIBRARY := $(BUILDDIR)/libs/$(TARGET_LIBRARY_NAME)
 
-SOURCEDIR = $(PROJDIR)/src/engine/common
+SOURCEDIR = $(PROJDIR)/src/engine/taggers/scene_tagger
 OBJECTSDIR = $(BUILDDIR)/objects
+
+COMPONENTS_SOURCEDIRS = $(PROJDIR)/src/engine/components/image_classifier
+COMPONENTS_SOURCEDIRS += $(PROJDIR)/src/engine/components/image_tag_mapper
+COMPONENTS_SOURCEDIRS += $(PROJDIR)/src/engine/components/image_tag_filterer
 
 INC_DIRS := $(shell find $(SOURCEDIR) -type d)
 INC_FLAGS := $(addprefix -I,$(INC_DIRS))
 INC_FLAGS += -I$(PROJDIR)/src/engine/
 
+LOCAL_LIBS_DIR = $(BUILDDIR)/libs
+LOCAL_LIBS = libcommon.a
+LOCAL_LIB_FLAGS = -L$(LOCAL_LIBS_DIR) $(addprefix -l,$(LOCAL_LIBS))
+
+# OpenCV related
 OPENCV_INC = /usr/local/include/opencv4
 OPENCV_LIB_DIR = /usr/local/lib/
 OPENCV_LIBS = opencv_core opencv_imgproc
@@ -22,25 +31,28 @@ JSON_FLAGS = -I$(JSON_INC)
 CXX = g++
 CXXFLAGS = -g -std=c++14 -Wall -c
 CXXFLAGS += $(INC_FLAGS)
+CXXFLAGS += $(LOCAL_LIB_FLAGS)
 CXXFLAGS += $(OPENCV_FLAGS)
 CXXFLAGS += $(JSON_FLAGS)
+CXXFLAGS += $(COMMON_FLAGS)
 CXXFLAGS += -MMD -MP
 
 SOURCES := $(shell find $(SOURCEDIR) -name '*.cpp' -or -name '*.c' -or -name '*.s')
+SOURCES += $(foreach dir,$(COMPONENTS_SOURCEDIRS), $(shell find $(dir) -name '*.cpp'))
 OBJECTS = $(addprefix $(OBJECTSDIR), $(patsubst $(PROJDIR)%.cpp,%.o,$(SOURCES)))
 # OBJECTS := $(patsubst $(D)/%.cpp.o,$(D)/%.o,$(SOURCES:%=$(BUILDDIR)/%.o))
 
-all: dir $(LIBRARY)
+all: dir $(TARGET_LIBRARY)
 
 dir:
 	mkdir -p $(BUILDDIR)/libs
 	mkdir -p $(OBJECTSDIR)
 
-$(LIBRARY): $(OBJECTS)
+$(TARGET_LIBRARY): $(OBJECTS)
 	ar ru $@ $^
 	ranlib $@
 
-# $(EXECUTABLE): $(OBJECTS)
+# $(TARGET_EXECUTABLE): $(OBJECTS)
 # 	$(CXX) $^ -o $@
 
 $(OBJECTS): $(OBJECTSDIR)/%.o : $(PROJDIR)/%.cpp
@@ -49,4 +61,4 @@ $(OBJECTS): $(OBJECTSDIR)/%.o : $(PROJDIR)/%.cpp
 
 clean:
 	rm -f $(OBJECTS)
-	rm -r $(LIBRARY)
+	rm -r $(TARGET_LIBRARY)
