Moving the implementation of Tensor3D to header for the definitions to be found while including the class

--- a/src/engine/common/Makefile
+++ b/src/engine/common/Makefile
@@ -13,8 +13,8 @@ INC_FLAGS += -I$(PROJDIR)/src/engine/
 OPENCV_INC = /usr/local/include/opencv4
 OPENCV_LIB_DIR = /usr/local/lib/
 OPENCV_LIBS = opencv_core opencv_imgproc
-OPENCV_FLAGS = -L$(OPENCV_LIB_DIR) $(addprefix -l,$(OPENCV_LIBS))
-OPENCV_FLAGS += -I/usr/local/include/opencv4
+OPENCV_LIB_FLAGS = -L$(OPENCV_LIB_DIR) $(addprefix -l,$(OPENCV_LIBS))
+OPENCV_FLAGS = -I/usr/local/include/opencv4
 
 JSON_INC = $(PROJDIR)/thirdparty/nlohmann/
 JSON_FLAGS = -I$(JSON_INC)
@@ -24,9 +24,10 @@ CXXFLAGS = -g -std=c++14 -Wall -c
 CXXFLAGS += $(INC_FLAGS)
 CXXFLAGS += $(OPENCV_FLAGS)
 CXXFLAGS += $(JSON_FLAGS)
-CXXFLAGS += -MMD -MP
 
-SOURCES := $(shell find $(SOURCEDIR) -name '*.cpp' -or -name '*.c' -or -name '*.s')
+LDFLAGS = $(OPENCV_LIB_FLAGS)
+
+SOURCES := $(shell find $(SOURCEDIR) -name '*.cpp')
 OBJECTS = $(addprefix $(OBJECTSDIR), $(patsubst $(PROJDIR)%.cpp,%.o,$(SOURCES)))
 # OBJECTS := $(patsubst $(D)/%.cpp.o,$(D)/%.o,$(SOURCES:%=$(BUILDDIR)/%.o))
 
@@ -37,7 +38,7 @@ dir:
 	mkdir -p $(OBJECTSDIR)
 
 $(LIBRARY): $(OBJECTS)
-	ar ru $@ $^
+	ar -r $@ $^
 	ranlib $@
 
 # $(EXECUTABLE): $(OBJECTS)
