Updated cv::Mat to tensor3d conversion in image_utils

--- a/test/functional/Makefile
+++ b/test/functional/Makefile
@@ -18,7 +18,7 @@ LOCAL_LIB_FLAGS := -L$(LOCAL_LIBS_DIR) $(addprefix -l,$(LOCAL_LIBS))
 # OpenCV related
 # OPENCV_INC = /usr/local/include/opencv4
 OPENCV_LIB_DIR = /usr/local/lib/
-OPENCV_LIBS = opencv_core opencv_imgproc
+OPENCV_LIBS = opencv_core opencv_imgproc opencv_imgcodecs opencv_highgui opencv_videoio
 OPENCV_LIB_FLAGS = -L$(OPENCV_LIB_DIR) $(addprefix -l,$(OPENCV_LIBS))
 OPENCV_FLAGS += -I/usr/local/include/opencv4
 
